--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms-merchant",
+  "name": "koa-cms-boilerplate",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -11,17 +11,25 @@
     "posttest": "nyc report --reporter=lcov",
     "validate": "npm run lint && npm t"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/geraldyeo/koa-cms-boilerplate.git"
+  },
+  "author": "Gerald Yeo <gerald.yeo@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "babel-cli": "6.8.0",
+    "babel-plugin-syntax-async-functions": "6.8.0",
+    "babel-plugin-transform-runtime": "6.8.0",
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.8.0",
     "bookshelf": "0.9.4",
+    "bunyan": "1.8.1",
     "co": "4.6.0",
     "co-views": "2.1.0",
+    "glob": "7.0.3",
     "knex": "0.11.3",
     "koa": "2.0.0",
     "koa-bodyparser": "3.1.0",
@@ -33,10 +41,12 @@
     "koa-passport": "2.1.1",
     "koa-router": "7.0.1",
     "koa-static": "3.0.0",
-    "pg": "4.5.5"
+    "pg": "4.5.5",
+    "pg-native": "1.10.0"
   },
   "devDependencies": {
     "ava": "0.14.0",
+    "babel-eslint": "6.0.4",
     "commitizen": "2.8.1",
     "cz-conventional-changelog": "1.1.6",
     "eslint": "2.9.0",
